--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,48 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Rubik", serif;
   box-sizing: border-box;
 }
-.hero {
+.main {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(45deg, #010758, #490d61);
+  background: linear-gradient(-45deg, #040d12, #183d3d);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   color: white;
 }
-.hero h1 {
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.main h1 {
   font-size: 45px;
   font-weight: 500;
   margin-top: -50px;
   margin-bottom: 50px;
+  color: white;
 }
-.hero h1 span {
-  color: #ff2963;
+.main h1 span {
+  color: #ffdf0a;
 }
 textarea {
   width: 600px;
   height: 250px;
-  background: #403d84;
+  background: #5a5953;
   color: white;
   font-size: 15px;
   border: 0;
@@ -38,7 +54,7 @@ textarea {
 }
 textarea::placeholder {
   font-size: 16px;
-  color: #ddd;
+  color: white;
 }
 .row {
   width: 600px;
@@ -48,8 +64,8 @@ textarea::placeholder {
 }
 button {
   display: flex;
-  background: #ff2963;
-  color: white;
+  background: #ffdf0a;
+  color: black;
   font-size: 16px;
   padding: 10px 30px;
   border-radius: 35px;
@@ -64,7 +80,7 @@ button img {
 select {
   flex: 1;
   color: white;
-  background: #403d84;
+  background: #5a5953;
   height: 50px;
   padding: 0 20px;
   outline: 0;
